Fix overflow-x

--- a/public/style.css
+++ b/public/style.css
@@ -661,8 +661,8 @@ Ensure the default browser behavior of the `hidden` attribute.
   align-self: center;
 }
 
-.overflow-hidden {
-  overflow: hidden;
+.overflow-x-hidden {
+  overflow-x: hidden;
 }
 
 .rounded-md {
